Changes for feature baranch with blogs,date

--- a/buildblog-html/dashboard.html
+++ b/buildblog-html/dashboard.html
@@ -22,6 +22,9 @@
         </ul>
     </div>
 
+<div class="blogTitle">
+
+</div>
     <!--<script language="javascript">
         function toggle() {
             var ele = document.getElementById("title");
@@ -41,10 +44,13 @@
 
 
     <div class="story">
-
+        <div class="box">
         <!--<h2 id="title" onclick="toggle()"></h2>
         <p id="content"></p>-->
+        </div>
     </div>
+
+    <br>
 
 
 
