Changes on Dec 26

--- a/buildblog-html/dashboard.html
+++ b/buildblog-html/dashboard.html
@@ -21,8 +21,6 @@
         <ul id="navigation">
             <li class="list">Create</li>
             <ul class="sublist">
-                <!--<p>arun</p>
-                <p>Shiva</p>-->
             </ul>
 
             <li class="list">My Blogs</li>
@@ -36,39 +34,13 @@
                 <li>Search a Blog</li>
                 <li>Date Range</li>
             </ul>
-
-            <!--<li class ="list"> <a href="#">Create</a>
-                <ul class="sublist">
-                    &lt;!&ndash;<li><a></a></li>
-                    <li><a></a></li>&ndash;&gt;
-
-                </ul>
-            </li>
-
-            <li class ="list"><a href="#">My Blogs</a>
-
-                <ul class="sublist">
-                    <li><a href="#">Classic Offshore</a></li>
-                    <li><a href="#">Alternative offshore Companies</a></li>
-                </ul>
-            </li>
-            <li class ="list"><a href="#">Search</a>
-
-                <ul class="sublist">
-                    <li><a href="#">Search a Blog</a></li>
-                    <li><a href="#">Date Range</a></li>
-
-                </ul>
-            </li>-->
-
         </ul>
     </div>
 
 
-
+    <!--div for all blog stories container-->
     <div class="story">
-        <div class="blogTitle">
-
+        <div class="blogTitle"> <!--Name of the blog-->
         </div>
         <!--<div id="box">
 
@@ -76,11 +48,8 @@
     </div>
 
     <br>
-
-
-
     <div class="footer">
-        Copyright &copy;  Website Designed by Arun Shiva Semantibbits, Mentor : Sridhar Thumma 2016
+        Copyright &copy;  Website Designed by Arun Shiva Semanticbits, Mentor : Sridhar Thumma 2016
     </div>
 
 </div>
