--- a/buildblog-html/myblogs.html
+++ b/buildblog-html/myblogs.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body onload="readallData()">
+<body onload="readmyData()">
 <header>
     <span id="siteheader">BuildBlog</span>
         <a href="login.html"><span id="logout">Logout</span></a>
@@ -24,12 +24,17 @@
                 <ul class="sublist">
                 </ul>
 
-                <li class="list" >
-                    <a href="myblogs.html"> My Blogs </a></li>
+                <!--<li class="list" >
+                    <a id="active"> My Blogs </a></li>
                 <ul class="sublist">
+                </ul>-->
+                <li class="list" >
+                    <a href="dashboard.html">Dashboard</a></li>
+                <ul class="sublist">
+                </ul>
                 <!--<li>arun</li>
                 <li>Shiva</li>-->
-            </ul>
+
 
                 <li class="list">
                    Search</li>
@@ -41,7 +46,7 @@
         </div>
 
 
-
+        <div class="blogTitle"></div>
         <div class="content">
 
 
